--- a/reviewbib_short.bib
+++ b/reviewbib_short.bib
@@ -9,7 +9,6 @@
   year={2013},
   publisher={Cambridge Univ Press}
 }
-
 @phdthesis{fruehwald2013phonological,
   title={The Phonological Influence on Phonetic Change},
   author={Fruehwald, Josef},
@@ -26,17 +25,6 @@
   year={2008},
   publisher={Wiley Online Library}
 }
-@article{harrington2008compensation,
-  title={Compensation for coarticulation,/u/-fronting, and sound change in standard southern British: An acoustic and perceptual study},
-  author={Harrington, Jonathan and Kleber, Felicitas and Reubold, Ulrich},
-  journal={The Journal of the Acoustical Society of America},
-  volume={123},
-  number={5},
-  pages={2825--2835},
-  year={2008},
-  publisher={Acoustical Society of America}
-}
-
 @article{watt2000phonetic,
   title={Phonetic parallels between the close-mid vowels of {T}yneside {E}nglish: Are they internally or externally motivated?},
   author={Watt, Dominic JL},
@@ -56,4 +44,71 @@
   number={34},
   pages={226--231},
   year={1996}
+}
+@phdthesis{hall2009ethnicity,
+  title={Ethnicity and phonetic variation in a San Francisco neighborhood},
+  author={Hall-Lew, Lauren},
+  year={2009},
+  school={Stanford University}
+}
+@article{watt2001spectrographic,
+  title={A spectrographic analysis of vowel fronting in Bradford English},
+  author={Watt, Dominic and Tillotson, Jennifer},
+  journal={English World-Wide},
+  volume={22},
+  number={2},
+  pages={269--303},
+  year={2001},
+  publisher={John Benjamins Publishing Company}
+}
+@article{moore2009style,
+  title={Style, indexicality, and the social meaning of tag questions},
+  author={Moore, Emma and Podesva, Robert},
+  journal={Language in Society},
+  volume={38},
+  number={04},
+  pages={447--485},
+  year={2009},
+  publisher={Cambridge Univ Press}
+}
+@article{labov2013one,
+  title={One hundred years of sound change in Philadelphia: Linear incrementation, reversal, and reanalysis},
+  author={Labov, William and Rosenfelder, Ingrid and Fruehwald, Josef},
+  journal={Language},
+  volume={89},
+  number={1},
+  pages={30--65},
+  year={2013},
+  publisher={Linguistic Society of America}
+}
+@article{d2015persona,
+  title={Persona-based information shapes linguistic perception: Valley Girls and California vowels},
+  author={D'Onofrio, Annette},
+  journal={Journal of Sociolinguistics},
+  volume={19},
+  number={2},
+  pages={241--256},
+  year={2015},
+  publisher={Wiley Online Library}
+}
+@article{watt2002evaluation,
+  title={Evaluation of a technique for improving the mapping of multiple speakers’ vowel spaces in the F1\~{} F2 plane},
+  author={Watt, Dominic and Fabricius, Anne},
+  journal={Leeds Working Papers in Linguistics and Phonetics},
+  volume={9},
+  number={9},
+  pages={159--173},
+  year={2002},
+  publisher={University of Leeds}
+}
+@incollection{beal2008english,
+  title={English dialects in the North of England: phonology},
+  author={Beal, Joan},
+  booktitle={A Handbook of Varieties of English, Volume 1},
+  editor={Kortmann, B and Schneider, E W},
+  volume={1},
+  pages={122--144},
+  publisher={Mouton},
+  place={Berlin},
+  year={2004}
 }
